Fix menu checkbox indicator in dark mode

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -260,8 +260,8 @@
     top: 50%;
     width: 5px;
     height: 9px;
-    border-right: 2px solid #fff;
-    border-bottom: 2px solid #fff;
+    border-right: 2px solid hsl(var(--primary-foreground));
+    border-bottom: 2px solid hsl(var(--primary-foreground));
     transform: translateY(-62%) rotate(45deg);
   }
 
@@ -272,7 +272,7 @@
     top: 50%;
     width: 9px;
     height: 0;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid hsl(var(--primary-foreground));
     transform: translateY(-50%);
   }
 
